// The MIT License (MIT)
//
// Copyright (c) <year> <Nicolas Viennot>
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.option java_package = "com.android.checkin.proto";

message DeviceConfigurationProto {
  optional int32 touchScreen = 1;
  optional int32 keyboard = 2;
  optional int32 navigation = 3;
  optional int32 screenLayout = 4;
  optional bool hasHardKeyboard = 5;
  optional bool hasFiveWayNavigation = 6;
  optional int32 screenDensity = 7;
  optional int32 glEsVersion = 8;
  repeated string systemSharedLibrary = 9;
  repeated string systemAvailableFeature = 10;
  repeated string nativePlatform = 11;
  optional int32 screenWidth = 12;
  optional int32 screenHeight = 13;
  repeated string systemSupportedLocale = 14;
  repeated string glExtension = 15;
  optional int32 deviceClass = 16;
  optional int32 maxApkDownloadSizeMb = 17;
}
